fixed a few sentences in portfolio

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -47,7 +47,7 @@
           <section class="cards">
               <section class="card">
                 <div style="background-color: #d1e1e0";>
-                  <span class="content">I study journalism and psychology at Northwestern University. I will graduate in fall 2020 and will continue my education at the Medill School of Journalism's Master's program in Investigative reporting. Go 'cats!
+                  <span class="content">I study journalism and psychology at Northwestern University. I graduate in fall 2020, and will continue studying at Medill for a Master's degree in investigative reporting. Go 'cats!
                 </div>
               </section>
               <section class="card">
