adding final project

--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
-    <title>Irene Chang</title>
+    <link rel="stylesheet" href="css/about.styles.css">
+    <title>About: Irene Chang</title>
   </head>
   <body>
     <main>
@@ -39,41 +39,101 @@
               </span>
           </h2>
           <!-- <h1 class="ml2">Sunny mornings</h1> -->
-        <section class="welcome">
-            <p>I'm a multimedia journalist and storyteller.</p>
-            <p>Hover over the boxes to learn more about me!</p>
-        </section>
+      <section class="welcome">
+        <table class="welcomecontent">
+          <tr>
+            <td align="center" style="padding: 0 20px 0 260px;">
+              <img src="images/me.JPG" alt="Irene Chang photo" style="border-radius: 5px; height: 320px; width: 300px;">
+            </td>
+            <td align="left" style="padding-right: 260px;">
+              <p>I'm a multimedia journalist and storyteller.</p>
+              <p>Currently, I study journalism and psychology at Northwestern University. I'll be graduating in fall 2020, and going on to earn my Master's degree in Investigative Reporting at the Medill School of Journalism! Hover over the boxes to learn a few fun facts about me!</p>
+              <a class="link" href="https://instagram.com/_irene.c_/" target="_blank">Instagram</a>
+              <a class="link" href="https://www.linkedin.com/in/irene-chang-a53936163/" target="_blank">LinkedIn</a>
+              <a class="link" href="https://www.facebook.com/profile.php?id=100008193302436" target="_blank">Facebook</a>
+          </td>
+        </tr>
+    </table>
+      </section>
         <section class="grid">
           <section class="cards">
               <section class="card">
                 <div style="background-color: #d1e1e0";>
-                  <span class="content">I study journalism and psychology at Northwestern University. I graduate in fall 2020, and will continue studying at Medill for a Master's degree in investigative reporting. Go 'cats!
+                  <div class="cardtitle">
+                    <h4>Currently watching </h4>
+                  </div>
+                  <div class="cardimg">
+                    <div>
+                    <img src="images/naruto.jpg">
+                  </div>
+                    <span class="content">Naruto Shippuden!
+                  </div>
                 </div>
               </section>
               <section class="card">
                 <div style="background-color: #f1dbed";>
-                  <div class="content">I'm from the San Francisco Bay Area!</div>
+                  <div class="cardtitle">
+                    <h4>My hometown</h4>
+                  </div>
+                  <div class="cardimg">
+                    <div>
+                    <img src="images/sf.jpg">
+                  </div>
+                    <span class="content">I'm from the San Francisco Bay Area!
+                  </div>
                 </div>
               </section>
               <section class="card">
                 <div style="background-color: #d1e1e0";>
-                  <span class="content">Law school hopeful (LSAT score permitting).
+                  <div class="cardtitle">
+                    <h4>Newsy</h4>
+                  </div>
+                  <div class="cardimg">
+                    <div>
+                    <img src="images/kpixcamera.JPG">
+                  </div>
+                    <span class="content">I interviewed SF Mayor London Breed during my internship at the CBS SFBA news station!
+                  </div>
                 </div>
               </section>
               <section class="card">
                 <div style="background-color: #f1dbed";>
-                <span class="content">As a Taiwanese-American, I can speak English and Mandarin Chinese fluently. I also have an elementary grasp of French.
-              </div>
+                  <div class="cardtitle">
+                    <h4>Heritage</h4>
+                  </div>
+                  <div class="cardimg">
+                    <div>
+                    <img src="images/taiwanvp.JPG">
+                  </div>
+                    <span class="content">I'm Taiwanese American! I met with the Vice President of Taiwan, Chen Chien-Jen, in 2019.
+                  </div>
+                </div>
               </section>
               <section class="card">
                 <div style="background-color: #d1e1e0";>
-                <span class="content">I'm currently learning about web development and design.
-              </div>
+                  <div class="cardtitle">
+                    <h4>Pets</h4>
+                  </div>
+                  <div class="cardimg">
+                    <div>
+                    <img src="images/dog.jpg">
+                  </div>
+                    <span class="content">I have a German Shepherd dog named Feuer ("fire" in German, if you're wondering).
+                  </div>
+                </div>
               </section>
               <section class="card">
                 <div style="background-color: #f1dbed";>
-                <span class="content">I'm trying to learn how to cook homemade Chinese/Taiwanese cuisine (keyword: trying).
-              </div>
+                  <div class="cardtitle">
+                    <h4>Hobbies</h4>
+                  </div>
+                  <div class="cardimg">
+                    <div>
+                    <img src="images/cooking.jpg">
+                  </div>
+                    <span class="content">I love learning how to cook, and experimenting with tasty new dishes!
+                  </div>
+                </div>
               </section>
           </section>
         </section>
