--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -42,18 +42,28 @@
       <section class="welcome">
         <table class="welcomecontent">
           <tr>
-            <td align="center" style="padding: 0 20px 0 260px;">
-              <img src="images/me.JPG" alt="Irene Chang photo" style="border-radius: 5px; height: 320px; width: 300px;">
+            <td align="center">
+              <img id="photo1" src="images/me.JPG" alt="Irene Chang photo">
             </td>
-            <td align="left" style="padding-right: 260px;">
+            <td id="me" align="left">
               <p>I'm a multimedia journalist and storyteller.</p>
-              <p>Currently, I study journalism and psychology at Northwestern University. I'll be graduating in fall 2020, and going on to earn my Master's degree in Investigative Reporting at the Medill School of Journalism! Hover over the boxes to learn a few fun facts about me!</p>
+              <p id="study">Currently, I study journalism and psychology at Northwestern University. I'll be graduating in fall 2020, and going on to earn my Master's degree in Investigative Reporting at the Medill School of Journalism!</p>
+              <p>Hover over the boxes to learn a few fun facts about me!</p>
               <a class="link" href="https://instagram.com/_irene.c_/" target="_blank">Instagram</a>
               <a class="link" href="https://www.linkedin.com/in/irene-chang-a53936163/" target="_blank">LinkedIn</a>
               <a class="link" href="https://www.facebook.com/profile.php?id=100008193302436" target="_blank">Facebook</a>
           </td>
         </tr>
     </table>
+        <section class="welcomecontentmedia">
+              <img id="photo1" src="images/me.JPG" alt="Irene Chang photo">
+              <p>I'm a multimedia journalist and storyteller.</p>
+              <p>Currently, I study journalism and psychology at Northwestern University. I'll be graduating in fall 2020, and going on to earn my Master's degree in Investigative Reporting at the Medill School of Journalism!</p>
+              <p>Hover over the boxes to learn a few fun facts about me!</p>
+              <a class="link" href="https://instagram.com/_irene.c_/" target="_blank">Instagram</a>
+              <a class="link" href="https://www.linkedin.com/in/irene-chang-a53936163/" target="_blank">LinkedIn</a>
+              <a class="link" href="https://www.facebook.com/profile.php?id=100008193302436" target="_blank">Facebook</a>
+    </section>
       </section>
         <section class="grid">
           <section class="cards">
