--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -16,14 +16,14 @@
             <span></span>
             <span></span>
             <ul id="menu">
-              <a href="index.html"><li>Home</li></a>
+              <a href="about.html"><li>Home</li></a>
               <a href="about.html"><li>About</li></a>
               <a href="index.html"><li>Work</li></a>
             </ul>
           </div>
         </nav>
         <div id="name">
-          <a href="index.html">Irene Chang</p>
+          <a href="about.html">Irene Chang</p>
         </div>
         <div id="button">
           <a href="about.html">About</a>
@@ -49,6 +49,7 @@
               <p>I'm a multimedia journalist and storyteller.</p>
               <p id="study">Currently, I study journalism and psychology at Northwestern University. I'll be graduating in fall 2020, and going on to earn my Master's degree in Investigative Reporting at the Medill School of Journalism!</p>
               <p>Hover over the boxes to learn a few fun facts about me!</p>
+              <a class="link" href="https://drive.google.com/file/d/1xf5mn2Qp2WlAUtZsD7OS_exIxDvisr4f/view?usp=sharing" target="_blank">Resume</a>
               <a class="link" href="https://instagram.com/_irene.c_/" target="_blank">Instagram</a>
               <a class="link" href="https://www.linkedin.com/in/irene-chang-a53936163/" target="_blank">LinkedIn</a>
               <a class="link" href="https://www.facebook.com/profile.php?id=100008193302436" target="_blank">Facebook</a>
@@ -63,6 +64,7 @@
               <a class="link" href="https://instagram.com/_irene.c_/" target="_blank">Instagram</a>
               <a class="link" href="https://www.linkedin.com/in/irene-chang-a53936163/" target="_blank">LinkedIn</a>
               <a class="link" href="https://www.facebook.com/profile.php?id=100008193302436" target="_blank">Facebook</a>
+              <a class="link" href="https://drive.google.com/file/d/1xf5mn2Qp2WlAUtZsD7OS_exIxDvisr4f/view?usp=sharing" target="_blank">Resume</a>
     </section>
       </section>
         <section class="grid">
@@ -70,13 +72,13 @@
               <section class="card">
                 <div style="background-color: #d1e1e0";>
                   <div class="cardtitle">
-                    <h4>Currently watching </h4>
+                    <h4>Currently (re)reading</h4>
                   </div>
                   <div class="cardimg">
                     <div>
-                    <img src="images/naruto.jpg">
+                    <img src="images/1984.jpg">
                   </div>
-                    <span class="content">Naruto Shippuden!
+                    <span class="content">1984 by George Orwell
                   </div>
                 </div>
               </section>
