--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -76,7 +76,7 @@
                   </div>
                   <div class="cardimg">
                     <div>
-                    <img src="images/1984.jpg">
+                    <img src="images/orwell.jpg">
                   </div>
                     <span class="content">1984 by George Orwell
                   </div>
