--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -60,7 +60,7 @@
               <img id="photo1" src="images/me.JPG" alt="Irene Chang photo">
               <p>I'm a multimedia journalist and storyteller.</p>
               <p>Currently, I study journalism and psychology at Northwestern University. I'll be graduating in fall 2020, and going on to earn my Master's degree in Investigative Reporting at the Medill School of Journalism!</p>
-              <p>Hover over the boxes to learn a few fun facts about me!</p>
+              <p>Check out the boxes to learn a few fun facts about me!</p>
               <a class="link" href="https://instagram.com/_irene.c_/" target="_blank">Instagram</a>
               <a class="link" href="https://www.linkedin.com/in/irene-chang-a53936163/" target="_blank">LinkedIn</a>
               <a class="link" href="https://www.facebook.com/profile.php?id=100008193302436" target="_blank">Facebook</a>
@@ -79,6 +79,7 @@
                     <img src="images/orwell.jpg">
                   </div>
                     <span class="content">1984 by George Orwell
+                    <span class="welcomecontentmedia">One of my favorite books (always open to new recommendations!)
                   </div>
                 </div>
               </section>
