--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -57,7 +57,7 @@
               </section>
               <section class="card">
                 <div style="background-color: #d2bddd";>
-                  <a href="https://thenurj.com/" target="_blank" class="content" style="text-decoration: none; color: #24496d">I'm the print managing editor of the Northwestern Undergraduate Research Journal (NURJ), where I participated in editor recruitment, thesis solicitation, and finalizing the Journal for publication. Click for the link to the NURJ website!</a>
+                  <a href="https://thenurj.com/" target="_blank" class="content" style="text-decoration: none; color: #24496d">I was the print managing editor of the Northwestern Undergraduate Research Journal (NURJ) for the 2019-2020 school year. I recruited editors, solicited senior theses, and helped finalize the Journal for publication. Click for the link to the NURJ website!</a>
                 </div>
               </section>
               <section class="card">
